--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="[http://schemas.android.com/apk/res/android](http://schemas.android.com/apk/res/android)"
-    xmlns:tools="[http://schemas.android.com/tools](http://schemas.android.com/tools)">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Adicione esta linha -->
+    <!-- 1. Permissão de Internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -17,21 +18,20 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
-        <!-- Adicione a declaração da nova Activity aqui -->
+        <!-- 2. Declaração da Activity de Conversão -->
         <activity
             android:name=".ConverterActivity"
             android:exported="false" />
 
+        <!-- 3. Declaração da Activity Principal (LAUNCHER) -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
 
 </manifest>
-
