--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- Adicione esta linha -->
-    <!-- 1. Permissão de Internet -->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -18,20 +16,15 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
-        <!-- 2. Declaração da Activity de Conversão -->
         <activity
-            android:name=".ConverterFragment"
-            android:exported="false" />
-
-        <!-- 3. Declaração da Activity Principal (LAUNCHER) -->
-        <activity
-            android:name=".HomeFragment"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
